--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -122,6 +122,11 @@ input, select, textarea {
 		line-height: 1.75;
 	}
 
+	#one .inner, #one .inner h2, #one .inner h3, #one .inner h4, #one .inner b {
+		color: #003a5c;
+	}
+
+
 		@media screen and (max-width: 1680px) {
 
 			body, input, select, textarea {
@@ -3248,7 +3253,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style2 {
-			background-color: #98d8ea;
+			background-color: whitesmoke;
 		}
 
 		.wrapper.style2-alt {
