Remove unneeded sections

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3248,8 +3248,9 @@ input, select, textarea {
 			background-color: #003a5c;
 		}
 
+		/* Footer */
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: #003a5c;
 		}
 
 		.wrapper.style2 {
