--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2812,16 +2812,18 @@ input, select, textarea {
 	ul.icons {
 		cursor: default;
 		list-style: none;
-		padding-left: 0;
+		padding: 5% 0 0 50%;
 	}
 
 		ul.icons li {
 			display: inline-block;
 			padding: 0 0.75em 0 0;
+
 		}
 
 			ul.icons li:last-child {
 				padding-right: 0;
+				
 			}
 
 			ul.icons li > a, ul.icons li > span {
