--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2836,6 +2836,12 @@ input, select, textarea {
 
 /* Menu */
 
+	.inner.copyright {
+		display: flex;
+		flex-flow: row nowrap;
+		justify-content: center;
+	}
+
 	ul.menu {
 		list-style: none;
 		padding: 0;
