--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2449,7 +2449,7 @@ input, select, textarea {
 		input[type="radio"]:checked + label:before {
 			background: #ffffff;
 			border-color: #ffffff;
-			color: #b74e91;
+			color: #99d9eb;
 			content: '\f00c';
 		}
 
@@ -2545,7 +2545,7 @@ input, select, textarea {
 				}
 
 				.wrapper.style1-alt .icon.major:before {
-					color: #493382;
+					color: #98d8ea;
 				}
 
 				.wrapper.style2 .icon.major:before {
@@ -2553,7 +2553,7 @@ input, select, textarea {
 				}
 
 				.wrapper.style2-alt .icon.major:before {
-					color: #3e4094;
+					color: #98d8ea;
 				}
 
 				.wrapper.style3 .icon.major:before {
@@ -3035,7 +3035,7 @@ input, select, textarea {
 				-webkit-transition: opacity 1s ease;
 				-ms-transition: opacity 1s ease;
 				transition: opacity 1s ease;
-				background: rgba(49, 36, 80, 0.9);
+				background: #98d8ea;
 				content: '';
 				display: block;
 				height: 100%;
@@ -3775,14 +3775,14 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:before {
-				background: #98d8ea;
+				background: #003a5c;
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #003a5c, #eade98);
-				background-image: -webkit-linear-gradient(to right, #003a5c, #eade98);
-				background-image: -ms-linear-gradient(to right, #003a5c, #eade98);
-				background-image: linear-gradient(to right, #003a5c, #eade98);
+				background-image: -moz-linear-gradient(to right, #003a5c, #98d8ea);
+				background-image: -webkit-linear-gradient(to right, #003a5c, #98d8ea);
+				background-image: -ms-linear-gradient(to right, #003a5c, #98d8ea);
+				background-image: linear-gradient(to right, #003a5c, #98d8ea);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -3871,7 +3871,7 @@ input, select, textarea {
 
 						#sidebar nav a:after {
 							background-image: none;
-							background-color: #b74e91;
+							background-color: #98d8ea;
 						}
 
 		}
