--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2692,6 +2692,9 @@ input, select, textarea {
 		list-style: none;
 		margin-left: -1em;
 		padding-left: 0;
+		display: flex;
+		flex-flow: row nowrap;
+		justify-content: center;
 	}
 
 		ul.actions li {
